--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
       "@commitlint/config-conventional"
     ]
   },
-  "dependencies": {
-    "@tensorflow/tfjs": "^1.5.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "latest",
     "@commitlint/config-conventional": "latest",
@@ -64,7 +62,7 @@
       "git add"
     ]
   },
-  "main": "index.js",
+  "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "nyc": {
     "check-coverage": true,
@@ -76,6 +74,9 @@
       "html",
       "text"
     ]
+  },
+  "peerDependencies": {
+    "@tensorflow/tfjs": "^1.5.1"
   },
   "prettier": {
     "singleQuote": true,
