--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
       "git add"
     ]
   },
-  "main": "dist/index.js",
+  "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "nyc": {
     "check-coverage": true,
