--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,7 +10,7 @@ jobs:
       working-directory: ./pythreepio
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.7]
 
     steps:
     - uses: actions/checkout@v2
@@ -18,7 +18,6 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-        
     - name: Install
       uses: abatilo/actions-poetry@v1.5.0
       with:
@@ -38,4 +37,3 @@ jobs:
       working-directory: ${{ env.working-directory }}
       run: |
         pip install pytest
-        pytest
