--- a/pythreepio/pyproject.toml
+++ b/pythreepio/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["OpenMined"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+pip = "^20.0.0"
 numpy = "^1.18"
 torch = "^1.4"
 tensorflow = "^2.1"
@@ -14,5 +15,5 @@ tensorflow = "^2.1"
 pytest = "^3.0"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0.3", "pip>=20.0.0"]
 build-backend = "poetry.masonry.api"
