--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -19,12 +19,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install
-      uses: abatilo/actions-poetry@v1.5.0
-      with:
-        python_version: 3.8.0
-        poetry_version: 0.12.17
-        working_directory: ${{ env.working-directory }}
-        args: install
+      run: |
+        sudo apt-get update
+        python -m pip install --upgrade pip
+        cd ${{ env.working-directory }}
+        pip3 install -r requirements.txt
     - name: Lint with flake8
       working-directory: ${{ env.working-directory }}
       run: |
@@ -36,4 +35,4 @@ jobs:
     - name: Test with pytest
       working-directory: ${{ env.working-directory }}
       run: |
-        pip install pytest
+        pytest
