--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -1,4 +1,4 @@
-name: PyThreepio
+name: Threepio Crawler
 
 on: [push]
 
@@ -7,7 +7,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      working-directory: ./pythreepio
+      working-directory: ./docs-crawler
     strategy:
       matrix:
         python-version: [3.7]
@@ -18,12 +18,6 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install
-      run: |
-        sudo apt-get update
-        python -m pip install --upgrade pip
-        cd ${{ env.working-directory }}
-        pip3 install -r requirements.txt
     - name: Lint with flake8
       working-directory: ${{ env.working-directory }}
       run: |
@@ -32,7 +26,3 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      working-directory: ${{ env.working-directory }}
-      run: |
-        pytest
