fix: make package npm-installable from git

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "jest": "jest --coverage",
     "lint": "xo",
     "nyc": "cross-env NODE_ENV=test nyc jest",
+    "prepare": "rollup --config js/rollup.config.js",
     "test": "npm run lint && jest",
     "test-coverage": "npm run lint && npm run nyc"
   },
