--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   "engines": {
     "node": ">=8.3"
   },
+  "files": [
+    "./js/"
+  ],
   "homepage": "https://github.com/OpenMined/threepio",
   "husky": {
     "hooks": {
@@ -95,6 +98,9 @@
     "singleQuote": true,
     "bracketSpacing": true,
     "trailingComma": "none"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "remarkConfig": {
     "plugins": [
