--- a/pythreepio/static/mapped_commands_full.json
+++ b/pythreepio/static/mapped_commands_full.json
@@ -48925,29 +48925,68 @@
             {
                 "args": [
                     {
+                        "name": "linear_input",
+                        "kwarg": false,
+                        "opt": false
+                    },
+                    {
+                        "name": "linear_weight",
+                        "kwarg": false,
+                        "opt": false
+                    }
+                ],
+                "placeholder_output": "linear_ret",
+                "tf": "linear"
+            },
+            {
+                "args": [
+                    {
                         "name": "input",
                         "kwarg": false,
-                        "opt": false
-                    },
+                        "opt": false,
+                        "tfjs": "a",
+                        "placeholder_input": "linear_weight"
+                    }
+                ],
+                "attrs": [
+                    "torch",
+                    "t"
+                ],
+                "name": "t",
+                "tfjs": "transpose",
+                "tf": "transpose",
+                "placeholder_output": "weight_t"
+            },
+            {
+                "args": [
                     {
-                        "name": "weight",
+                        "name": "input",
                         "kwarg": false,
-                        "opt": false
+                        "opt": false,
+                        "tfjs": "a",
+                        "placeholder_input": "linear_input"
                     },
                     {
-                        "name": "bias",
+                        "name": "other",
+                        "kwarg": false,
+                        "opt": false,
+                        "tfjs": "b",
+                        "placeholder_input": "weight_t"
+                    },
+                    {
+                        "name": "out",
                         "kwarg": true,
                         "opt": true
                     }
                 ],
                 "attrs": [
                     "torch",
-                    "nn",
-                    "functional",
-                    "linear"
+                    "matmul"
                 ],
-                "name": "linear",
-                "tf": "linear"
+                "name": "matmul",
+                "tfjs": "matmul",
+                "tf": "matmul",
+                "placeholder_output": "linear_ret"
             }
         ],
         "conv2d": [
@@ -60927,7 +60966,7 @@
                     "torch",
                     "div"
                 ],
-                "name": "truediv",
+                "name": "Truediv",
                 "tfjs": "div",
                 "tf": "truediv"
             }
