--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "node": ">=8.3"
   },
   "files": [
-    "./js/"
+    "js/dist/*.js"
   ],
   "homepage": "https://github.com/OpenMined/threepio",
   "husky": {
