fix: add optional arg for linear translation

--- a/pythreepio/static/mapped_commands_full.json
+++ b/pythreepio/static/mapped_commands_full.json
@@ -48933,6 +48933,11 @@
                         "name": "linear_weight",
                         "kwarg": false,
                         "opt": false
+                    },
+                    {
+                        "name": "linear_bias",
+                        "kwarg": true,
+                        "opt": true
                     }
                 ],
                 "placeholder_output": "linear_ret",
