fix: rename package to openmined.threepio

--- a/pythreepio/setup.cfg
+++ b/pythreepio/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = 3p0
+name = openmined.threepio
 version = attr: pythreepio.__version__
 url = https://github.com/openmined/threepio
 author = openmined
