--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,5 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run all crawlers
-      run: .docs-crawler/docs/run_crawlers.sh
+      run: docs-crawler/docs/run_crawlers.sh
         
