--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: check permission
-      run: ls -l docs-crawler/docs/run_crawlers.sh
     - name: Run all crawlers
       run: chmod +x docs-crawler/docs/run_crawlers.sh
+    - name: run aggregate_crawler
+      run: python docs-crawler/docs/aggregate_crawler_output.py
         
