py/translate: Map PyTorch tensor __rsub__ to sub for Tensorflow.js.

--- a/pythreepio/static/mapped_commands_full.json
+++ b/pythreepio/static/mapped_commands_full.json
@@ -61285,6 +61285,29 @@
                 "tfjs": "sub"
             }
         ],
+        "rsub": [
+            {
+                "args": [
+                    {
+                        "name": "other",
+                        "kwarg": false,
+                        "opt": false,
+                        "tfjs": "b"
+                    },
+                    {
+                        "name": "value",
+                        "kwarg": false,
+                        "opt": false,
+                        "tfjs": "a"
+                    }
+                ],
+                "attrs": [
+                    "__rsub__"
+                ],
+                "name": "rsub",
+                "tfjs": "sub"
+            }
+        ],
         "copy": [
             {
                 "args": [
