torch/tfjs: Translate select to gather. (#120)
* torch/tfjs: Translate select to gather.

* torch/tfjs: Add JS tests for translating select to gather.

* Remove extra import in tests.

* pytorch.js: Make prettier.

* pytorch.js: Add comment.
Mainly to hopefully get the tests to run.

* pytorch.js: Prettier.

* pytorch.js: Prettier.

* js: Correct test.

Co-authored-by: Justin Harris <justindharris@gmail.com>

--- a/pythreepio/static/mapped_commands_full.json
+++ b/pythreepio/static/mapped_commands_full.json
@@ -61349,6 +61349,35 @@
                 "name": "float",
                 "tfjs": "cast"
             }
+        ],
+        "select": [
+            {
+                "args": [
+                    {
+                        "name": "value",
+                        "kwarg": false,
+                        "opt": false,
+                        "tfjs": "x"
+                    },
+                    {
+                        "name": "dim",
+                        "kwarg": false,
+                        "opt": false,
+                        "tfjs": "axis"
+                    },
+                    {
+                        "name": "index",
+                        "kwarg": false,
+                        "opt": false,
+                        "tfjs": "indices"
+                    }
+                ],
+                "attrs": [
+                    "select"
+                ],
+                "name": "select",
+                "tfjs": "gather"
+            }
         ]
     }
 }
