--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,9 +26,7 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run all crawlers
-      run: |
-        chmod +x docs-crawler/docs/run_crawlers.sh
-        docs-crawler/docs/run_crawlers.sh
+      run: cd docs-crawler/docs && sh run-crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
         
