--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,9 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run all crawlers
-      run: cd docs-crawler/docs && sh run-crawlers.sh
+      run: |
+        chmod +x docs-crawler/docs && sh run-crawlers.sh
+        ./docs-crawler/docs && sh run-crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
         
