--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run all crawlers
       run: |
-        chmod +x docs-crawler/docs && sh run-crawlers.sh
+        chmod +x docs-crawler/docs/run-crawlers.sh
         ./docs-crawler/docs && sh run-crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
