--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,8 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+        cd docs-crawlers
         poetry install 
     - name: Run all crawlers
       run: |
