--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,9 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run:
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        cd docs-crawler
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip	        
+        pip install flake8 pytest	        
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run all crawlers
       run: |
         chmod +x docs-crawler/docs/run_crawlers.sh
