--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,8 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run:
-        python -m pip install --upgrade pip	        
-        pip install flake8 pytest	        
+        python -m pip install --upgrade pip
+        cd docs-crawler/       
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run all crawlers
       run: |
