--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,17 +23,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: actions/cache@v1.1.2
-      id: cache-reqs
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-python-${{ matrix.python-version }}-pip-${{ hashFiles('docs-crawler/requirements*.txt') }}
     - name: Install dependencies
       run:
         sudo apt-get update
         python -m pip install --upgrade pip
-        hash -r
-        pip install -r docs-crawler/requirements.txt
+        pip install -r requirements.txt
     - name: Run all crawlers
       run: |
         chmod +x docs-crawler/docs/run_crawlers.sh
