--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
       run:
         sudo apt-get update
         python -m pip install --upgrade pip
-        pip install -r spacy
+        pip install spacy
     - name: Run all crawlers
       run: |
         chmod +x docs-crawler/docs/run_crawlers.sh
