--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         pip install spacy
     - name: Run all crawlers
       run: |
-        chmod +x docs-crawler/docs/run_crawlers.sh
+        sudo apt-get update
         bash docs-crawler/docs/run_crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
