--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run:
         python -m pip install --upgrade pip
-        pip install scrapy
+        pip install Scrapy==1.8.0
     - name: Run all crawlers
       run: |
         sudo apt-get update
