--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,10 @@ jobs:
     - name: Install dependencies
       run:
         python -m pip install --upgrade pip
-        pip install Scrapy==1.8.0
+        pip install Scrapy
     - name: Run all crawlers
       run: |
-        sudo apt-get update
+      cd docs-crawler/docs/
         bash docs-crawler/docs/run_crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
