--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,12 +26,11 @@ jobs:
     - name: Install dependencies
       run:
         python -m pip install --upgrade pip
-        pip install Scrapy
+        pip install Scrapy==1.8.0
     - name: Run all crawlers
       run: |
         cd docs-crawler/docs/
         bash run_crawlers.sh
-        cd
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
         
