--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,14 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run:
+        sudo apt-get update
         python -m pip install --upgrade pip
-        pip install Scrapy==1.8.0
+        pip install Scrapy
+    - name: Delete old JSON files
+      run: |
+        rm -r docs-crawler/docs/output/tf/2.1.json
+        rm -r docs-crawler/docs/output/tfjs/1.5.1.json
+        rm -r docs-crawler/docs/output/torch/1.4.0.json
     - name: Run all crawlers
       run: |
         cd docs-crawler/docs/
