--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,10 +38,9 @@ jobs:
         bash run_crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
-    - name: commit
-      run:
-        git commit
-        git push
+    - name: file cross check
+      run: git status --short | wc -l
+        
       
          
         
