--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,12 @@ jobs:
         bash run_crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
-    - name: file cross check
-      run: git status --short | wc -l
+    - name: Commit to repository
+      run: |
+        git config user.name "GitHub Action"
+        git config user.email "actions@users.noreply.github.com"
+        git add js/*
+        git diff --quiet && git diff --staged --quiet || (git commit -m "JS stubs auto-commit"; git push)
         
       
          
