--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,8 @@ jobs:
       run: |
         git config user.name "GitHub Action"
         git config user.email "actions@users.noreply.github.com"
-        git add js/*
+        cd /pythreepio/static
+        git add  mapped_commands_full.json
         git diff --quiet && git diff --staged --quiet || (git commit -m "JS stubs auto-commit"; git push)
         
       
