--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
         git config user.email "actions@users.noreply.github.com"
         cd pythreepio/static
         git add  mapped_commands_full.json
-        git diff --quiet && git diff --staged --quiet || (git commit -m "JS stubs auto-commit"; git push origin dev:dev)
+        git diff --quiet && git diff --staged --quiet || (git commit -m "added final ouput"; git push origin dev)
         
       
          
