--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
     - name: file cross check
-      run: "[(git status --short | wc -l) = 0 ]"
+      run: "[ $(git status --short | wc -l) = 0 ]"
         
         
       
