--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,8 @@ jobs:
         bash run_crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
+    - name: git status
+      run: git status
     - name: file cross check
       run: "[ $(git status --short | wc -l) = 0 ]"
         
