--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,8 @@ jobs:
       run: python docs-crawler/docs/aggregate_crawler_output.py
     - name: git status
       run: git status
+    - name: git diff
+      run: git diff
     - name: file cross check
       run: "[ $(git status --short | wc -l) = 0 ]"
         
