--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,20 +13,24 @@ jobs:
   python-tests:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./docs-crawler
     strategy:
       matrix:
         python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run:
+      run: |
+        sudo apt-get update
         python -m pip install --upgrade pip
-        pip install Scrapy
+        cd ${{ env.working-directory }}
+        pip3 install -r requirements.txt
     - name: Delete old JSON files
       run: |
         rm -r docs-crawler/docs/output/tf/2.1.json
