--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,8 +44,14 @@ jobs:
       run: python docs-crawler/docs/aggregate_crawler_output.py
     - name: git status
       run: git status
-    - name: git diff
+    - name: git diff --name-only
       run: git diff --name-only
+    - name: git diff tf 2.1
+      run: git diff docs-crawler/docs/output/tf/2.1.json
+    - name: git diff torch 1.4
+      run: git diff docs-crawler/docs/output/torch/1.4.0.json
+    - name: git diff mapped commands
+      run: git diff pythreepio/static/mapped_commands_full.json
     - name: file cross check
       run: "[ $(git status --short | wc -l) = 0 ]"
         
