--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,8 @@ jobs:
   python-tests:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./docs-crawler
     strategy:
       matrix:
         python-version: [3.8]
@@ -25,8 +27,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run:
+        sudo apt-get update
         python -m pip install --upgrade pip
-        pip install Scrapy
+        cd ${{ env.working-directory }}
+        pip3 install -r requirements.txt
     - name: Delete old JSON files
       run: |
         rm -r docs-crawler/docs/output/tf/2.1.json
@@ -38,10 +42,8 @@ jobs:
         bash run_crawlers.sh
     - name: run aggregate_crawler
       run: python docs-crawler/docs/aggregate_crawler_output.py
-    - name: git status
-      run: git status
-    - name: file cross check
-      run: "[ $(git status --short | wc -l) = 0 ]"
+    
+    
         
         
       
