--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,8 +40,8 @@ jobs:
       run: |
         cd docs-crawler/docs/
         bash run_crawlers.sh
-    - name: run aggregate_crawler
-      run: python docs-crawler/docs/aggregate_crawler_output.py
+    # - name: run aggregate_crawler
+    #   run: python docs-crawler/docs/aggregate_crawler_output.py
     - name: diff
       run: git diff
       
