--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
         python -m pip install --upgrade pip
         cd ${{ env.working-directory }}
         pip3 install -r requirements.txt
+        pip list | grep Scrapy
     - name: Delete old JSON files
       run: |
         rm -r docs-crawler/docs/output/tf/2.1.json
