Update with docs

--- a/pythreepio/requirements.txt
+++ b/pythreepio/requirements.txt
@@ -1,6 +1,58 @@
-
+absl-py==0.11.0
+alabaster==0.7.12
+astunparse==1.6.3
+Babel==2.9.0
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+colorama==0.4.4
+docutils==0.16
+gast==0.3.3
+google-auth==1.27.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+grpcio==1.35.0
+h5py==2.10.0
+idna==2.10
+imagesize==1.2.0
+importlib-resources==1.5.0
+Jinja2==2.11.3
+Keras-Preprocessing==1.1.2
+Markdown==3.3.3
+MarkupSafe==1.1.1
 numpy==1.18.1
-torch==1.4.0
+oauthlib==3.1.0
+opt-einsum==3.3.0
+packaging==20.9
+Pillow==8.1.0
+protobuf==3.15.2
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.8.0
+pyparsing==2.4.7
+pytest==3.0.0
+pytz==2021.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.1
+six==1.15.0
+snowballstemmer==2.1.0
+Sphinx==3.5.1
+sphinx-rtd-theme==0.5.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+tensorboard==2.2.2
+tensorboard-plugin-wit==1.8.0
 tensorflow==2.2.1
-pytest==3.0
-importlib-resources~=1.5.0
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
+torch==1.4.0
+torchvision==0.5.0+cu92
+urllib3==1.26.3
+Werkzeug==1.0.1
+wrapt==1.12.1
