--- a/pythreepio/requirements.txt
+++ b/pythreepio/requirements.txt
@@ -52,7 +52,7 @@ tensorflow==2.2.1
 tensorflow-estimator==2.2.0
 termcolor==1.1.0
 torch==1.4.0
-torchvision==0.5.0+cu92
+torchvision==0.5.0
 urllib3==1.26.3
 Werkzeug==1.0.1
 wrapt==1.12.1
